--- a/gym.html
+++ b/gym.html
@@ -1,17 +1,15 @@
 <html>
 <head>
-  <title> karmona.es </title>
+  <title> KarmoWeb </title>
    <link rel="shortcut icon" href="mono-imagen-animada-0231.gif" />
-   <link rel="stylesheet" type="text/css" href="estilos.css" />
 </head>
 <body bgcolor="#000000" text="#FFFFFF" link="#80FF80" vlink="#A0FF40" alink="#FFFFFF">
-<body background="b.png">
+<body background="images/background.png">
 <center>
-
-<table border=0 cellspacing=0 cellpadding=2 width="600">
+<table cellpadding=2 width="600">
   <tr>
     <td bgcolor="#00de31">
-              <img src="banner.png" width="100%">
+              <img src="images/banner.png" width="100%">
     </td>
   </tr>
 </table>
@@ -52,7 +50,7 @@
                 <td width=7 bgcolor="#000200">&nbsp;</td>
                 <td width=7 bgcolor="#000100">&nbsp;</td>
 			</tr>
-            <img src="p.jpg" align="right" width="12%">
+            <img src="images/Decor1.jpg" align="right" width="12%">
 			</table>
             
 
@@ -60,7 +58,7 @@
 	<tr bgcolor="#363636">
 		<td colspan=5><font face="verdana, ms sans serif, sans serif" size=3>
 		        WIP (work in progress)
-    <img src="mono-imagen-animada-0155.gif">
+    <img src="images/monoConfuso.gif">
 	</tr>
 
 	</table>
