--- a/index.html
+++ b/index.html
@@ -2,26 +2,18 @@
 <head>
   <title> KarmoWeb </title>
    <link rel="shortcut icon" href="mono-imagen-animada-0231.gif" />
-   <link rel="stylesheet" type="text/css" href="estilos.css" />
-
 </head>
 <body bgcolor="#000000" text="#FFFFFF" link="#80FF80" vlink="#A0FF40" alink="#FFFFFF">
-<body background="b.png">
-
-<audio src="uuaaaa.mp3" autoplay="1" loop="1" preload="none"></audio>
-
+<body background="images/background.png">
 <center>
-
 <table cellpadding=2 width="600">
   <tr>
     <td bgcolor="#00de31">
-              <img src="banner.png" width="100%">
+              <img src="images/banner.png" width="100%">
     </td>
   </tr>
 </table>
-
 <br>
-
 <table border=0 cellspacing=0 cellpadding=0 width="60%">
   <tr valign=top>
     <td>
@@ -55,7 +47,7 @@
                 <td width=7 bgcolor="#000200">&nbsp;</td>
                 <td width=7 bgcolor="#000100">&nbsp;</td>
 			</tr>
-            <img src="p.jpg" align="right" width="8%">
+            <img src="images/Decor1.jpg" align="right" width="8%">
 			</table>
             
 
@@ -111,7 +103,7 @@
                 <td width=7 bgcolor="#000200">&nbsp;</td>
                 <td width=7 bgcolor="#000100">&nbsp;</td>
 			</tr>
-            <img src="p.jpg" align="right" width="8%">
+            <img src="images/Decor1.jpg" align="right" width="8%">
 			</table>
             
 
@@ -119,12 +111,11 @@
 	<tr bgcolor="#363636">
 		<td colspan=5><font face="verdana, ms sans serif, sans serif" size=3>
 		karmona@karmoWeb: ~ $ whoami
-        <p><img src="aaaa.jpg" align="left" width="21%"></p>
+        <p><img src="images/mifoto.jpg" align="left" width="21%"></p>
 	            	<p>Hi! I am a Computer Science student in the University of Málaga who have a deep interest bodybuilding, programming and political philosophy.
               I have been going to the gym for a year (focused on muscle gain). I have experience in C++, java, C, ARM assembly and HTML.</p>
             </font>
 	</tr>
-
 	</table>
 	</td>
 	<td align=right valign=top>
