--- a/pr.html
+++ b/pr.html
@@ -1,17 +1,15 @@
 <html>
 <head>
-  <title> karmona.es </title>
+  <title> KarmoWeb </title>
    <link rel="shortcut icon" href="mono-imagen-animada-0231.gif" />
-   <link rel="stylesheet" type="text/css" href="estilos.css" />
 </head>
 <body bgcolor="#000000" text="#FFFFFF" link="#80FF80" vlink="#A0FF40" alink="#FFFFFF">
-<body background="b.png">
+<body background="images/background.png">
 <center>
-
-<table border=0 cellspacing=0 cellpadding=2 width="600">
+<table cellpadding=2 width="600">
   <tr>
     <td bgcolor="#00de31">
-              <img src="banner.png" width="100%">
+              <img src="images/banner.png" width="100%">
     </td>
   </tr>
 </table>
@@ -37,22 +35,22 @@
 			<table border=0 cellspacing=0 cellpadding=0>
 			<tr bgcolor="#004000">
                 <td width=7 bgcolor="#005100">&nbsp;</td>
-				<td width=7 bgcolor="#004800"><b>G</b></td>
-				<td width=7 bgcolor="#004500"><b>y</b></td>
-				<td width=7 bgcolor="#004200"><b>m</b></td>
-				<td width=7 bgcolor="#003800">&nbsp;</td>
-				<td width=7 bgcolor="#003300"><b>P</b></td>
-				<td width=7 bgcolor="#002900"><b>r</b></td>
-				<td width=7 bgcolor="#002200"><b>o</b></td>
-				<td width=7 bgcolor="#001700"><b>g</b></td>
-                <td width=7 bgcolor="#001100"><b>r</b></td>
-                <td width=7 bgcolor="#000500"><b>e</b></td>
-                <td width=7 bgcolor="#000400"><b>s</b></td>
-                <td width=7 bgcolor="#000300"><b>s</b></td>
+				<td width=7 bgcolor="#004800"><b>P</b></td>
+				<td width=7 bgcolor="#004500"><b>r</b></td>
+				<td width=7 bgcolor="#004200"><b>o</b></td>
+				<td width=7 bgcolor="#003800"><b>j</b></td>
+				<td width=7 bgcolor="#003300"><b>e</b></td>
+				<td width=7 bgcolor="#002900"><b>c</b></td>
+				<td width=7 bgcolor="#002200"><b>t</b></td>
+				<td width=7 bgcolor="#001700"><b>s</b></td>
+                <td width=7 bgcolor="#001100">&nbsp;</td>
+                <td width=7 bgcolor="#000500">&nbsp;</td>
+                <td width=7 bgcolor="#000400">&nbsp;</td>
+                <td width=7 bgcolor="#000300">&nbsp;</td>
                 <td width=7 bgcolor="#000200">&nbsp;</td>
                 <td width=7 bgcolor="#000100">&nbsp;</td>
 			</tr>
-            <img src="p.jpg" align="right" width="12%">
+            <img src="images/Decor1.jpg" align="right" width="12%">
 			</table>
             
 
@@ -60,7 +58,7 @@
 	<tr bgcolor="#363636">
 		<td colspan=5><font face="verdana, ms sans serif, sans serif" size=3>
 		        WIP (work in progress)
-    <img src="mono-imagen-animada-0155.gif">
+    <img src="images/monoConfuso.gif">
 	</tr>
 
 	</table>
