--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
 		karmona@karmoWeb: ~ $ whoami
         <p><img src="images/mifoto.jpg" align="left" width="21%"></p>
 	            	<p>Hi! I am a Computer Science student in the University of Málaga who have a deep interest bodybuilding, programming and political philosophy.
-              I have been going to the gym for a year (focused on muscle gain). I have experience in C++, java, C, ARM assembly and HTML.</p>
+              I have been going to the gym for a year (focused on muscle gain). I have experience in C++, java, C, ARM assembly and HTML.<br>
+              <br>
+              You can contact me <a href="ContactMe.html">here</a> :)
+              </p>
             </font>
 	</tr>
 	</table>
@@ -146,6 +149,7 @@
                   <b>&raquo;</b> <a href="index.html">Home</a><br>
                   <b>&raquo;</b> <a href="gym.html">Gym gains</a><br>
                   <b>&raquo;</b> <a href="pr.html">Projects</a><br>
+                   <b>&raquo;</b> <a href="ContactMe.html">Contact me</a><br>
                 </font></td>
                 
               </tr>
