Arreglo error icono pestaña

--- a/gym.html
+++ b/gym.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title> KarmoWeb </title>
-   <link rel="shortcut icon" href="mono-imagen-animada-0231.gif" />
+   <link rel="shortcut icon" href="images/monoMono.gif" />
 </head>
 <body bgcolor="#000000" text="#FFFFFF" link="#80FF80" vlink="#A0FF40" alink="#FFFFFF">
 <body background="images/background.png">
@@ -13,7 +13,6 @@
     </td>
   </tr>
 </table>
-
 <br>
 
 <table border=0 cellspacing=0 cellpadding=0 width="40%">
