--- a/pr.html
+++ b/pr.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title> KarmoWeb </title>
-   <link rel="shortcut icon" href="mono-imagen-animada-0231.gif" />
+   <link rel="shortcut icon" href="images/monoMono.gif" />
 </head>
 <body bgcolor="#000000" text="#FFFFFF" link="#80FF80" vlink="#A0FF40" alink="#FFFFFF">
 <body background="images/background.png">
