Añado Style.css

--- a/ContactMe.html
+++ b/ContactMe.html
@@ -2,9 +2,13 @@
 <head>
   <title> KarmoWeb </title>
    <link rel="shortcut icon" href="images/monoMono.gif" />
+  <link rel="stylesheet" href="style.css" />
+  
 </head>
-<body bgcolor="#000000" text="#FFFFFF" link="#80FF80" vlink="#A0FF40" alink="#FFFFFF">
-<body background="images/background.png">
+
+<body class="screen scanlines" bgcolor="#000000" text="#FFFFFF" link="#80FF80" vlink="#A0FF40" alink="#FFFFFF">
+<div class="scan-line"></div>
+    
 <center>
 <table cellpadding=2 width="600">
   <tr>
@@ -13,10 +17,9 @@
     </td>
   </tr>
 </table>
-
 <br>
 
-<table border=0 cellspacing=0 cellpadding=0 width="35%">
+<table class="shadow" border=0 cellspacing=0 cellpadding=0 width="40%">
   <tr valign=top>
     <td bgcolor="#004000">
       <table border=0 cellspacing=0 cellpadding=2 width="100%" height="100%">
@@ -47,7 +50,7 @@
                 <td width=7 bgcolor="#000200">&nbsp;</td>
                 <td width=7 bgcolor="#000100">&nbsp;</td>
 			</tr>
-            <img src="images/Decor1.jpg" align="right" width="15%">
+            <img src="images/Decor1.jpg" align="right" width="11%">
 			</table>
             
 
@@ -92,7 +95,7 @@
       <table border=0 cellspacing=0 cellpadding=0 width="160">
         <tr>
           <td bgcolor="#00A000">
-            <table border=0 cellspacing=2 cellpadding=4 width="100%">
+            <table class="shadow" border=0 cellspacing=2 cellpadding=4 width="100%">
               <tr valign=top>
                 <td bgcolor="#004000"><font face="verdana,arial,helvetica" size=2>
                   <b>Links</b>
