--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
 <div class="scan-line"></div>
 
 <body class="screen scanlines" bgcolor="#000000" text="#FFFFFF" link="#80ffa0" vlink="#36e080" alink="#FFFFFF">
-      
 <center>
-<table class="shadow" cellpadding=2 width="600">
-  <tr>
-    <td bgcolor="#00de50">
-              <img src="images/banner.png" width="100%">
-    </td>
-  </tr>
-</table>
-<br>
+    <h2 class="hero glitch layers" data-text="Karmona"><span>Karmona</span></h2>
+    <br>
+    <br>
 <table border=0 cellspacing=0 cellpadding=0 width="60%">
   <tr valign=top>
     <td>
