--- a/pr.html
+++ b/pr.html
@@ -11,15 +11,9 @@
 <body class="screen scanlines" bgcolor="#000000" text="#FFFFFF" link="#80ffa0" vlink="#36e080" alink="#FFFFFF">
       
 <center>
-<table class="shadow" cellpadding=2 width="600">
-  <tr>
-    <td bgcolor="#00de50">
-              <img src="images/banner.png" width="100%">
-    </td>
-  </tr>
-</table>
-<br>
-
+    <h2 class="hero glitch layers" data-text="Karmona"><span>Karmona</span></h2>
+    <br>
+    <br>
 <table class="shadow" border=0 cellspacing=0 cellpadding=0 width="40%">
   <tr valign=top>
     <td bgcolor="#004000">
