--- a/ContactMe.html
+++ b/ContactMe.html
@@ -59,7 +59,7 @@
 					
 						<tr align="center">
 							<th><a href="https://github.com/Karm0na"><img src="images/pc.png" alt="Github" width="80" height="80"></a></th> 
-							<th><a href="https://www.instagram.com/karmona_01/"><img src="images/video.png" alt="Instagram" width="80" height="80"></a></th> 
+							<th><a href="https://www.instagram.com/karmona01_/"><img src="images/video.png" alt="Instagram" width="80" height="80"></a></th> 
 						</tr>
                         <td>&nbsp;</td>
 						<tr align="center">
@@ -67,7 +67,7 @@
 							<th>Instagram</th>
 						</tr>
 						<tr align="center">
-							<th><a href="mailto:antoniocarmonamarin636@gmail.com"><img src="images/email.png" alt="E-mail" width="115" height="115"></a></th> 
+							<th><a href="mailto:carmonamarinantonio@protonmail.com"><img src="images/email.png" alt="E-mail" width="115" height="115"></a></th> 
 							<th><a href="https://twitter.com/Karm0na"><img src="images/trash.png" alt="Twitter" width="115" height="115"></a></th> 
 						</tr>
 						<tr align="center">
